--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titulo{
+  display: flex;
+  flex-direction: row;
+  font-size: 24px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.subtitulo{
+  display: flex;
+  font-size: small;
+  padding-bottom: 40px;
+}
+
+.claves{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.recuperar-clave{
+  text-transform: none !important;
+}
+
+.nueva-cuenta{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.solicita{
+  margin-left: 5px;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.inputs{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
